[tool.robotpy-build.metadata]
name = "robotpy-photonvision"
description = "RobotPy wrappers for PhotonVision"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-photonvision"
license = "MIT"
install_requires = [
    "robotpy-wpiutil<2025.0.0,>=2024.3.2",
    "robotpy-wpimath<2025.0.0,>=2024.3.2",
    "robotpy-cscore<2025.0.0,>=2024.3.2",
    "robotpy-apriltag<2025.0.0,>=2024.3.2",
    "wpilib<2025.0.0,>=2024.3.2",
]

[build-system]
requires = [
    "robotpy-build<2025.0.0,~=2024.0.0",
    "robotpy-wpiutil<2025.0.0,~=2024.3.2",
    "robotpy-wpimath<2025.0.0,~=2024.3.2",
    "robotpy-cscore<2025.0.0,~=2024.3.2",
    "robotpy-apriltag<2025.0.0,~=2024.3.2",
    "wpilib<2025.0.0,~=2024.3.2",
]

[tool.robotpy-build]
base_package = "photonvision"

# ======================== Begin opencv download ========================

[tool.robotpy-build.static_libs."opencv_cpp".maven_lib_download]
artifact_id = "opencv-cpp"
group_id = "edu.wpi.first.thirdparty.frc2024.opencv"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "4.8.0-2"
libs = ["opencv480"]


# ======================== Begin photonvision itself stuff ========================

[tool.robotpy-build.wrappers."photonvision".maven_lib_download]
artifact_id = "photonlib-combinedcpp"
group_id = "org.photonvision"
repo_url = "https://maven.photonvision.org/snapshots"
version = "dev-v2024.3.0-36-g02133a38"
use_sources = true
sources = [
    "photon-lib/photon/PhotonCamera.cpp",
    "photon-lib/photon/PhotonPoseEstimator.cpp",
    "photon-lib/PhotonVersion.cpp",
    "photon-targeting/photon.pb.cc",
    "photon-targeting/photon/dataflow/structures/Packet.cpp",
    "photon-targeting/photon/targeting/MultiTargetPNPResult.cpp",
    "photon-targeting/photon/targeting/PhotonPipelineResult.cpp",
    "photon-targeting/photon/targeting/PhotonTrackedTarget.cpp",
    "photon-targeting/photon/targeting/PNPResult.cpp",
    "photon-targeting/photon/targeting/proto/MultiTargetPNPResultProto.cpp",
    "photon-targeting/photon/targeting/proto/PhotonPipelineResultProto.cpp",
    "photon-targeting/photon/targeting/proto/PhotonTrackedTargetProto.cpp",
    "photon-targeting/photon/targeting/proto/PNPResultProto.cpp",
]

[[tool.robotpy-build.wrappers."photonvision".maven_lib_download.header_patches]]
patch = "photonvision/src/PhotonPoseEstimator.h.patch"

[[tool.robotpy-build.wrappers."photonvision".maven_lib_download.patches]]
patch = "photonvision/src/PhotonPoseEstimator.cpp.patch"

[tool.robotpy-build.wrappers."photonvision"]
name = "photonvision"

depends = [
    "wpilibc",
    "wpilib_core",
    "wpimath_cpp",
    "wpiHal",
    "ntcore",
    "wpiutil",
    "wpimath_geometry",
    "apriltag",
    "opencv_cpp",
]

sources = [
    "photonvision/src/module.cpp",
    "photonvision/cvnp/cvnp.cpp",
    "photonvision/cvnp/cvnp_synonyms.cpp",
]

extra_includes = [
    "photonvision/include/photon-lib",
    "photonvision/include/photon-targeting",
]

generation_data = "gen"

[tool.robotpy-build.wrappers."photonvision".autogen_headers]
# photonlib
PhotonCamera         = "photon-lib/photon/PhotonCamera.h"
PhotonPoseEstimator  = "photon-lib/photon/PhotonPoseEstimator.h"
PhotonTargetSortMode = "photon-lib/photon/PhotonTargetSortMode.h"
PhotonUtils          = "photon-lib/photon/PhotonUtils.h"
SimPhotonCamera      = "photon-lib/photon/simulation/SimPhotonCamera.h"
SimVisionSystem      = "photon-lib/photon/simulation/SimVisionSystem.h"
SimVisionTarget      = "photon-lib/photon/simulation/SimVisionTarget.h"
PNPResult            = "photon-targeting/photon/targeting/PNPResult.h"
PhotonTrackedTarget  = "photon-targeting/photon/targeting/PhotonTrackedTarget.h"
PhotonPipelineResult = "photon-targeting/photon/targeting/PhotonPipelineResult.h"
MultiTargetPNPResult = "photon-targeting/photon/targeting/MultiTargetPNPResult.h"
Packet               = "photon-targeting/photon/dataflow/structures/Packet.h"


[[tool.robotpy-build.wrappers."photonvision".type_casters]]
header = "cvnp/cvnp.h"
types = ["cv::Mat"]
